# wave-verify-sgx

./: .gitmodules  Makefile.am  README.md  client.cpp  msgio.cpp  msgio.h  protocol.h  run.in  settings  settings.h  sp.cpp
Enclave/: Enclave.cpp  Enclave.edl  Makefile.am  verify.cpp  verify.h
client_src/: Makefile.am  agent_wget.cpp  client.cpp  configure.ac  iasrequest.cpp  run.in  settings
enclave_plus_app_src/: Makefile.am  benchmark_verify.go  configure.ac  enclave_app.cpp  enclave_app.h  run.in  test_verify.go
enclave_plus_app_src/Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl  Makefile.am  Makefile.am.libasncodec
lang/go/: verify.go  verify_test.go
utils/: msgio.cpp  protocol.h  settings.h
